crates/flowlog-build/tests/errors/parser/duplicate_attribute.dl
.decl edge(x: number, x: number)
